# truthiness

./: .gitignore  Makefile  README.md  stack.yaml  truthiness.cabal
executables/: Main.hs
tests/: DocTest.hs
tests/Truthiness/: Test.hs
