name:                truthiness
version:             0.0.0
synopsis:            TODO 
description:         TODO 
homepage:            http://github.com/sboosali/truthiness#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2015 Spiros Boosalis
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/sboosali/truthiness


library
 hs-source-dirs:      library
 default-language:    Haskell2010
 ghc-options:         -Wall

 exposed-modules:   
  Truthiness 
  Truthiness.Main  

 build-depends:    
    base >=4.7 && <5 
  , containers ==0.5.*
  , text
  , bytestring
  -- , lens 


-- $ stack exec truthiness
executable truthiness
 hs-source-dirs:      executables 
 main-is:             Main.hs
 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:     
    base
  , truthiness


-- $ stack test truthiness 
test-suite doctest
 hs-source-dirs:      tests
 main-is:             DocTest.hs
 type:                exitcode-stdio-1.0
 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:     
  base
  , truthiness
  , doctest ==0.10.*

-- $ stack test truthiness 
test-suite unittest
 hs-source-dirs:      tests
 main-is:             UnitTest.hs
 type:                exitcode-stdio-1.0
 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 other-modules: 
  Truthiness.Test

 build-depends:     
  base
  , truthiness
  , hspec ==2.2.*
  , QuickCheck ==2.8.*

